--- a/views/account/login.html
+++ b/views/account/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>用户登录 - GitWebHook</title>
 </head>
 <body>
 
