--- a/views/member/index.html
+++ b/views/member/index.html
@@ -21,14 +21,14 @@
         </div>
         <nav class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">WebHook</a> </li>
-                <li><a href="#">Server</a> </li>
-                <li><a href="#">Member</a> </li>
+                <li><a href="{{urlfor "HomeController.Index"}}">WebHook</a> </li>
+                <li><a href="{{urlfor "ServerController.Index"}}">Server</a> </li>
+                <li><a href="{{urlfor "MemberController.Index"}}">Member</a> </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="http://www.bootcss.com/" target="_blank" style="padding: 9px;">
-                        <img src="/static/images/headimgurl.jpg" class="img-circle" height="32px">
+                    <a href="{{urlfor "MemberController.My"}}" style="padding: 9px;">
+                    <img src="/static/images/headimgurl.jpg" class="img-circle" style="width: 32px;height: 32px;">
                     </a>
                 </li>
             </ul>
@@ -38,7 +38,7 @@
 <div class="container">
     <div class="bs-docs-container">
         <div class="title">
-            <h3>WebHook List</h3>
+            <h3>Member List</h3>
             <hr>
         </div>
         <div class="body">
@@ -49,7 +49,7 @@
             </table>
         </div>
         <div class="body-botton text-center">
-            <button class="btn btn-success btn-sm">添加新的 Git WebHook</button>
+            <button class="btn btn-success btn-sm">添加新的 Member</button>
         </div>
     </div>
 </div>
@@ -58,6 +58,24 @@
         <span>&copy; </span>
         <span><a href="https://github.com/lifei6671/go-git-webhook" target="_blank">Go GitWebHook</a> </span>
         <span>版权所有</span>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="memberModal" tabindex="-1" role="dialog" aria-labelledby="memberModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">编辑或添加</h4>
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
     </div>
 </div>
 </body>
