--- a/views/home/index.html
+++ b/views/home/index.html
@@ -5,38 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Go GitWebHook List - GitWebHook</title>
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/static/css/global.css">
     <script src="/static/js/jquery-1.12.4.min.js" type="text/javascript"></script>
     <script src="/static/js/jquery.form.js" type="text/javascript"></script>
 </head>
 <body>
-<header class="navbar navbar-static-top bs-docs-nav">
-    <div class="container">
-        <div class="navbar-header">
-            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/" class="navbar-brand">Go GitWebHook</a>
-        </div>
-        <nav class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="{{urlfor "HomeController.Index"}}">WebHook</a> </li>
-                <li><a href="{{urlfor "ServerController.Index"}}">Server</a> </li>
-                <li><a href="{{urlfor "MemberController.Index"}}">Member</a> </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="{{urlfor "MemberController.My"}}" style="padding: 9px;">
-                        <img src="/static/images/headimgurl.jpg" class="img-circle" style="width: 32px;height: 32px;">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
+{{template "widgets/head.html" .}}
 <div class="container">
     <div class="bs-docs-container">
         <div class="title">
@@ -57,7 +32,7 @@
 </div>
 <!-- Modal -->
 <div class="modal fade" id="webHookModal" tabindex="-1" role="dialog" aria-labelledby="webHookModalLabel">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <form method="post" id="webHookForm">
                 <div class="modal-header">
@@ -65,7 +40,34 @@
                     <h4 class="modal-title" id="webHookTitle">New WebHook</h4>
                 </div>
                 <div class="modal-body">
-
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label>Git Repository</label>
+                                    <input type="text" name="name" id="repositoryName" placeholder="Repository Name" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label>Branch</label>
+                                    <input type="text" name="branch" id="repositoryBranch" placeholder="Repository Branch" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="form-group">
+                                    <label>Server Tag <a href="###" data-toggle="tooltip" title="请填写Server对应的Tag，系统会自动匹配Server"><i class="fa fa-question" aria-hidden="true"></i></a></label>
+                                    <input type="text" name="tag" id="serverTag" placeholder="Server Tag" class="form-control">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <label>Callback Shell Script <a href="###"><i class="fa fa-question" aria-hidden="true"></i></a></label>
+                                <textarea name="shell" id="shellScript" class="form-control" style="height: 200px;resize: none"></textarea>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -75,13 +77,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid navbar-fixed-bottom footer">
-    <div class="text-center">
-        <span>&copy; </span>
-        <span><a href="https://github.com/lifei6671/go-git-webhook" target="_blank">Go GitWebHook</a> </span>
-        <span>版权所有</span>
-    </div>
-</div>
+{{template "widgets/foot.html" .}}
 <script src="/static/bootstrap/js/bootstrap.js" type="text/javascript"></script>
 <script src="/static/js/global.js" type="text/javascript"></script>
 </body>
