--- a/views/home/index.html
+++ b/views/home/index.html
@@ -87,28 +87,35 @@
     </div>
 </div>
 <!-- Modal -->
-<div class="modal fade" id="copyTokenModal" tabindex="-1" role="dialog" aria-labelledby="copyTokenModalLabel">
+<div class="modal fade" id="copySecureModal" tabindex="-1" role="dialog" aria-labelledby="copySecureModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="copyTokenModalTitle">Copy Token</h4>
+                <h4 class="modal-title" id="copySecureModalTitle">Copy Token</h4>
             </div>
             <div class="modal-body">
-                <form class="form-inline">
+                <form class="form-horizontal">
                     <div class="form-group">
-                        <label>Url </label>
-                        <input readonly type="text" placeholder="URL" class="form-control" value="{{.BaseUrl}}/{{urlfor ""}}" style="width: 350px;margin-left: 5px;">
+                        <div class="col-lg-2">
+                            <label>Url </label>
+                        </div>
+                        <div class="col-lg-10">
+                            <input type="text" id="urlInput" placeholder="URL" class="form-control" data-value="{{.BaseUrl}}/{{urlfor "HomeController.Payload" ":key" ""}}">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label>Copy Token </label>
-                        <input readonly type="text" id="tokenInput" placeholder="Token" class="form-control" style="width: 350px;margin-left: 5px;">
+                        <div class="col-lg-2">
+                        <label>Secure </label>
+                        </div>
+                        <div class="col-lg-10">
+                        <input type="text" id="secureInput" placeholder="Token" class="form-control" >
+                        </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
@@ -130,8 +137,16 @@
            });
        }) .on("click",".copy-hook-btn",function () {
            var key = $(this).attr("data-key");
-           $("#tokenInput").val(key);
-           $("#copyTokenModal").modal("show");
+           var secure = $(this).attr("data-secure");
+           var baseUrl = $("#urlInput").attr("data-value");
+
+           $("#urlInput").val(baseUrl + key);
+           $("#secureInput").val(secure);
+           $("#copySecureModal").modal("show");
+
+       });
+       $("#copySecureModal").find("input").on("mouseover",function () {
+           $(this).select();
        });
     });
 </script>
