--- a/views/template.html
+++ b/views/template.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/css/global.css">
 </head>
 <body>
-<header class="navbar navbar-static-top bs-docs-nav">
+<header class="navbar navbar-static-top bs-docs-nav navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
